[project]
name = "bakabot"
description = "Discord bot used for extracting information from Bakalari"
authors = [{ name = "Lukáš Průša" }]
license = { file = "LICENSE" }
requires-python = ">=3.8"
dynamic = ["version"]

dependencies = [
    "playwright",
    "disnake",
    "bs4",
    "python-dotenv",
    "pytz",
    "setuptools",
]

[project.optional-dependencies]
types = ["types-setuptools", "types-pytz", "types-beautifulsoup4"]
test = ["pytest", "pytest-mock"]
format = ["black", "mypy", "autoflake"]

[tool.black]
line-length = 120

[tool.mypy]
strict = true

[tool.autoflake]
remove-all-unused-imports = true
