[metadata]
name = bakabot
description = Discord bot used for extracting information from Bakalari
author = Lukáš Průša
license = MIT
license_file = LICENSE
platform = win32, linux

[options]
packege_dir =
    =src
packages = find:
install_requires =
    pyppeteer
    py-cord>=2.0.0b1
    bs4
    Pillow
    python-dotenv
    pytz
python_requires = >=3.8
zip_file = no

[options.packages.find]
where = src
include = pkg*