[metadata]
name = bakabot
description = Discord bot used for extracting information from Bakalari
author = Lukáš Průša
license_file = LICENSE
platform = win32, linux

[options]
packege_dir =
    =src
packages = find:
install_requires =
    playwright
    disnake
    bs4
    python-dotenv
    pytz
    pytest
    pytest-mock
python_requires = >=3.8
zip_file = no

[options.packages.find]
where = src
include = pkg*